[package]
name = "jsoncutil"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
atomicwrites = "0.4.3"
clap = { version = "4.5.16", features = ["derive"] }
crossbeam-channel = "0.5.13"
derivative = "2.2.0"
interprocess = "2.2.1"
memchr = "2.7.4"
notify-debouncer-mini = "0.4.1"
oxidized-json-checker = "0.3.2"
# serde_json = { version = "1.0.132", features = ["preserve_order", "arbitrary_precision"] }
thiserror = "1.0.63"

# [profile.release]
# debug = 2
